tests/lean/guillemet_hint.lean.expected.out
guillemet_hint.lean:6:10: error: unexpected token `if`; if you want to use it as an identifier, use `«if»`; expected '_' or identifier
